[tool.poetry]
name = "deeplearningai-langgraph-agents-with-amazon-bedrock"
version = "0.1.0"
description = ""
authors = ["Philipp Kaindl <philikai@amazon.de>", "Luca Perrozzi <lperroz@amazon.ch>", "Gabriel Rodriguez Garcia <garoga@amazon.com>", "Markus Rollwagen <rollwag@amazon.ch>"]
readme = "README.md"
package-mode = false

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "23.2.1"
aiohappyeyeballs = "2.3.5"
aiohttp = "3.10.2"
aiosignal = "1.3.1"
altair = "5.3.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "24.2.0"
boto3 = "1.34.155"
botocore = "1.34.155"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.2.1"
cycler = "0.12.1"
distro = "1.9.0"
fastapi = "0.112.0"
ffmpy = "0.4.0"
filelock = "3.15.4"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gradio = "5.1.0"
gradio-client = "1.4.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
huggingface-hub = "0.25.2"
idna = "3.7"
importlib-resources = "6.4.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
kiwisolver = "1.4.5"
langchain = "0.2.12"
langchain-aws = "0.1.15"
langchain-core = "0.2.28"
langchain-openai = "0.1.20"
langchain-text-splitters = "0.2.2"
langgraph = "0.0.53"
langsmith = "0.1.98"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.1.post1"
mdurl = "0.1.2"
multidict = "6.0.5"
numpy = "1.26.4"
openai = "1.40.0"
orjson = "3.10.6"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.4.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pydub = "0.25.1"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.2"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.20.0"
ruff = "0.5.6"
s3transfer = "0.10.2"
semantic-version = "2.10.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
starlette = "0.37.2"
tavily-python = "0.3.5"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tomlkit = "0.12.0"
toolz = "0.12.1"
tqdm = "4.66.5"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uuid6 = "2024.7.10"
uvicorn = "0.30.5"
websockets = "11.0.3"
yarl = "1.9.4"
ipykernel = "6.29.5"
jupyter = "1.0.0"
langchain-community = "0.2.11"
pygraphviz = ">=1.13,<2.0"
duckduckgo-search = "^6.2.6"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
